[gd_scene load_steps=2 format=3 uid="uid://iptjvvc72mwm"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_vqs3j"]

[node name="Main Menu" type="Node2D"]
script = ExtResource("1_vqs3j")

[node name="Button Manager" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Start" type="Button" parent="Button Manager"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
text = "Start"

[node name="Instructions" type="Button" parent="Button Manager"]
offset_left = 196.0
offset_top = 14.0
offset_right = 297.0
offset_bottom = 45.0
text = "Instructions"

[node name="Quit" type="Button" parent="Button Manager"]
offset_left = 190.0
offset_top = 67.0
offset_right = 427.0
offset_bottom = 161.0
text = "Quit"

[connection signal="pressed" from="Button Manager/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Button Manager/Instructions" to="." method="_on_instructions_pressed"]
[connection signal="pressed" from="Button Manager/Quit" to="." method="_on_quit_pressed"]
